--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Panerabread Menu Screen</title>
+  <title>My Profile</title>
 </head>
 
 <!-- <h1>Synthe Silk Roses</h1>
